--- a/RestaurantApiUdemyCS6/RestaurantApiUdemyCS6.csproj
+++ b/RestaurantApiUdemyCS6/RestaurantApiUdemyCS6.csproj
@@ -23,6 +23,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
 </Project>
