Authentication with JWT tokens.

--- a/RestaurantApiUdemyCS6/appsettings.json
+++ b/RestaurantApiUdemyCS6/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtExpireDays": 15,
+    "JwtIssuer":  "http://restaurantapi.com"
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
