--- a/RestaurantApiUdemyCS6/appsettings.json
+++ b/RestaurantApiUdemyCS6/appsettings.json
@@ -1,14 +1,15 @@
 {
+  "AllowedOrigins":  "http://localhost:8080",
   "Authentication": {
     "JwtKey": "PRIVATE_KEY_DONT_SHARE",
     "JwtExpireDays": 15,
-    "JwtIssuer":  "http://restaurantapi.com"
+    "JwtIssuer": "http://restaurantapi.com"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
