Refactoring connection string.

--- a/RestaurantApiUdemyCS6/appsettings.Development.json
+++ b/RestaurantApiUdemyCS6/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+	"ConnectionStrings": {
+		"RestaurantDbConnection": "Server=(localdb)\\mssqllocaldb;Database=RestaurantDb;Trusted_Connection=True;"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	}
 }
